# endstone-territory

./: CMakeLists.txt  LICENSE  README.md  README_zh-CN.md  pyproject.toml
.github/workflows/: build.yml  nightly.yml
endstone-territory-gui/: pyproject.toml
endstone-territory-gui/src/endstone_territory_gui/: territory_gui.py
endstone-territory-plugin/: CMakeLists.txt
endstone-territory-plugin/include/: territory.h  translate.h
endstone-territory-plugin/src/: territory.cpp
include/: DataBase.h  TerritoryCore.h  Territory_Action.cpp  Territory_Action.h  database.hpp  event_listener.h  menu.h  territory.h  territory_action.h  territory_instance.h  territory_types.h  translate.h  translate.hpp
language/: en_US.json  zh_CN.json
language/chinese/: lang.json
language/english/: lang.json
src/: event_listener.cpp  menu.cpp  territory.cpp  territory_action.cpp  territory_instance.cpp  version.h.in
src/endstone_territory/: __init__.py  territory.py
src/endstone_territory_gui/: __init__.py  territory_gui.py
